Fix the name of openebs-pool chaos (#190)
Signed-off-by: Chandan Kumar <chandan.kumar@mayadata.io>

--- a/charts/openebs/openebs-pool-container-failure/engine.yaml
+++ b/charts/openebs/openebs-pool-container-failure/engine.yaml
@@ -1,7 +1,7 @@
 apiVersion: litmuschaos.io/v1alpha1
 kind: ChaosEngine
 metadata:
-  name: target-chaos
+  name: pool-chaos
   namespace: default
 spec:
   # It can be true/false
